# parashogi

./: CMakeLists.txt
game/: board.cpp  board.hpp  common.hpp  game.cpp  game.hpp  main.cpp  piece.cpp  piece.hpp  render.cpp  render.hpp  render_common.hpp  render_framebuffers.cpp  render_framebuffers.hpp  render_loadpng.cpp  render_loadpng.hpp  render_meshes.cpp  render_meshes.hpp  render_shaders.cpp  render_shaders.hpp  render_textures.cpp  render_textures.hpp
